--- a/Hin2n_android/app/build.gradle
+++ b/Hin2n_android/app/build.gradle
@@ -49,7 +49,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "wang.switchy.an2n"
+        applicationId "wang.switchy.hin2n"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode getVersionCode()
@@ -72,10 +72,10 @@ android {
 
         release {
             //为我们的release包添加签名文件配置
-            storeFile file("An2n.jks")
-            storePassword getEnvOrConsole("AN2N_KSTOREPWD", "Keystore password")
-            keyAlias "An2n"
-            keyPassword getEnvOrConsole("AN2N_KEYPWD", "Key password")
+            storeFile file("Hin2n.jks")
+            storePassword getEnvOrConsole("HIN2N_KSTOREPWD", "Keystore password")
+            keyAlias "Hin2n"
+            keyPassword getEnvOrConsole("HIN2N_KEYPWD", "Key password")
         }
     }
 
@@ -154,7 +154,7 @@ android {
 
 greendao {
     schemaVersion 1 //版本
-    daoPackage 'wang.switchy.an2n.storage.db.base'// 一般为app包名+生成文件的文件夹名
+    daoPackage 'wang.switchy.hin2n.storage.db.base'// 一般为app包名+生成文件的文件夹名
     targetGenDir 'src/main/java' //生成文件路径
 }
 
@@ -174,6 +174,6 @@ dependencies {
     implementation 'com.umeng.sdk:analytics:latest.integration'
 
     implementation 'org.greenrobot:greendao:3.2.0' // add library
-//    compile 'org.greenrobot:greendao-generator:3.2.2'
+//    implementation 'org.greenrobot:greendao-generator:3.2.2'
 
 }
