--- a/An2n/app/build.gradle
+++ b/An2n/app/build.gradle
@@ -184,5 +184,5 @@ dependencies {
 //    implementation 'org.greenrobot:greendao-generator:3.2.2'
 
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
-    implementation 'cn.pedant.sweetalert:library:1.3'
+    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
 }
