--- a/Hin2n_android/app/build.gradle
+++ b/Hin2n_android/app/build.gradle
@@ -141,6 +141,13 @@ android {
                 manifestPlaceholders += [ARCH: "x86"]
             }
         }
+        allarch {
+            dimension "arch"
+            ndk {
+                abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+                manifestPlaceholders += [ARCH: "allarch"]
+            }
+        }
     }
 
     productFlavors.all {
@@ -180,4 +187,7 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.0' // add library
 //    implementation 'org.greenrobot:greendao-generator:3.2.2'
 
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+
+    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
 }
