Update gradle, add github, osc channels

--- a/Hin2n_android/app/build.gradle
+++ b/Hin2n_android/app/build.gradle
@@ -127,6 +127,14 @@ android {
             dimension "channel"
             manifestPlaceholders += [UMENG_CHANNEL_VALUE: "normal"]
         }
+        github {
+            dimension "channel"
+            manifestPlaceholders += [UMENG_CHANNEL_VALUE: "github"]
+        }
+        osc {
+            dimension "channel"
+            manifestPlaceholders += [UMENG_CHANNEL_VALUE: "osc"]
+        }
         arm {
             dimension "arch"
             ndk {
