--- a/Hin2n_android/app/build.gradle
+++ b/Hin2n_android/app/build.gradle
@@ -65,6 +65,8 @@ def getAllManifestValues = { variant ->
     def v2 = getManifestValues("BUGLY_APPID", variant)
     def v3 = getManifestValues("SHARE_WX_APPID", variant)
     def v4 = getManifestValues("SHARE_WX_APPSECRET", variant)
+    def v5 = getManifestValues("SHARE_WB_APPID", variant)
+    def v6 = getManifestValues("SHARE_WB_APPSECRET", variant)
 
     return v1 && v2
 }
@@ -79,7 +81,9 @@ android {
         versionCode getVersionCode()
         versionName getVersionName()
         multiDexEnabled true //突破方法数65535的限制
-        manifestPlaceholders = [UMENG_CHANNEL_VALUE: "normal", ARCH: "all", UMENG_APPKEY_VALUE: "", BUGLY_APPID_VALUE: "", SHARE_WX_APPID_VALUE: "", SHARE_WX_APPSECRET_VALUE: ""]
+        manifestPlaceholders = [UMENG_CHANNEL_VALUE: "normal", ARCH: "all", UMENG_APPKEY_VALUE: "", BUGLY_APPID_VALUE: "",
+                                SHARE_WX_APPID_VALUE: "", SHARE_WX_APPSECRET_VALUE: "",
+                                SHARE_WB_APPID_VALUE: "", SHARE_WB_APPSECRET_VALUE: ""]
         resConfigs "en", "zh-rCN", "zh-rTW" // 多语言
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
